# themealdb-rs

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: rust.yml
examples/: basic_usage.rs  search_by_name.rs
src/: lib.rs  mealdb.rs  preamble.rs  prelude.rs  traits.rs
src/api_datamodel/: area.rs  area_list_reponse.rs  categories.rs  categories_response.rs  filtered_meal_response.rs  ingredient.rs  ingredient_list_response.rs  meal.rs  meal_list_response.rs  mod.rs
src/datamodel/: category.rs  ingredient.rs  meal.rs  mod.rs
