[package]
name = "mealdb"
version = "0.1.0"
edition = "2018"
license = "BSD-3-Clause"
authors = ["Joshua Salzedo"]
homepage = "https://github.com/theunkn0wn1/themealdb-rs"
description = "Async API wraper for themealdb.com"
keywords = ["themealdb", "mealdb"]
categories =["api-bindings"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
serde_json = "1.0.64"

[dependencies.reqwest]
features = ["json"]
version = "0.11.4"

[dependencies.serde]
version = "1.0.126"
features = ["derive"]


[dev-dependencies.tokio]
version = "1.7.1"
features= ["full"]